emoji and capitalisation handling

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "fa1e6e3a",
    "metadata": {},
    "outputs": [
@@ -487,66 +487,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from prototype import KeyEvents, KeyModifiers, SpecialKeys, KeyPressEvent"
+    "from prototype import KeyEvents, KeyModifiers, SpecialKeys, KeyPressEvent\n",
+    "from grapheme import graphemes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "e10d0eaf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = KeyEvents(SpecialKeys.ENTER, KeyPressEvent.DOWN_AND_UP, KeyModifiers.Shift | KeyModifiers.Alt)"
+    "test = KeyEvents(\"A\", KeyPressEvent.DOWN_AND_UP, KeyModifiers.Shift)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "3d4b9b57",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<prototype.KeyEvents at 0x73ba384a7290>"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "497b9191",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "48"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import sys\n",
-    "\n",
-    "sys.getsizeof(test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "62c6aae6",
    "metadata": {},
    "outputs": [
@@ -554,46 +511,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'text': 'Alt',\n",
-      "  'key': 'Alt',\n",
-      "  'code': 'AltLeft',\n",
-      "  'windows_virtual_key_code': 18,\n",
-      "  'native_virtual_key_code': 18,\n",
-      "  'type_': 'keyDown',\n",
-      "  'modifiers': 1},\n",
-      " {'text': 'Shift',\n",
+      "[{'text': 'Shift',\n",
       "  'key': 'Shift',\n",
       "  'code': 'ShiftLeft',\n",
       "  'windows_virtual_key_code': 16,\n",
       "  'native_virtual_key_code': 16,\n",
       "  'type_': 'keyDown',\n",
-      "  'modifiers': 9},\n",
-      " {'text': 'Enter',\n",
-      "  'key': 'Enter',\n",
-      "  'code': 'Enter',\n",
-      "  'windows_virtual_key_code': 13,\n",
-      "  'native_virtual_key_code': 13,\n",
+      "  'modifiers': 8},\n",
+      " {'text': 'A',\n",
+      "  'key': 'A',\n",
+      "  'code': 'KeyA',\n",
+      "  'windows_virtual_key_code': 65,\n",
+      "  'native_virtual_key_code': 65,\n",
       "  'type_': 'keyDown',\n",
-      "  'modifiers': 9},\n",
+      "  'modifiers': 8},\n",
       " {'text': 'Shift',\n",
       "  'key': 'Shift',\n",
       "  'code': 'ShiftLeft',\n",
       "  'windows_virtual_key_code': 16,\n",
       "  'native_virtual_key_code': 16,\n",
-      "  'type_': 'keyUp',\n",
-      "  'modifiers': 1},\n",
-      " {'text': 'Alt',\n",
-      "  'key': 'Alt',\n",
-      "  'code': 'AltLeft',\n",
-      "  'windows_virtual_key_code': 18,\n",
-      "  'native_virtual_key_code': 18,\n",
       "  'type_': 'keyUp',\n",
       "  'modifiers': 0},\n",
-      " {'text': 'SpecialKeys.ENTER',\n",
-      "  'key': 'SpecialKeys.ENTER',\n",
-      "  'code': 'Enter',\n",
-      "  'windows_virtual_key_code': 13,\n",
-      "  'native_virtual_key_code': 13,\n",
+      " {'text': 'a',\n",
+      "  'key': 'a',\n",
+      "  'code': 'KeyA',\n",
+      "  'windows_virtual_key_code': 65,\n",
+      "  'native_virtual_key_code': 65,\n",
       "  'type_': 'keyUp',\n",
       "  'modifiers': 0}]\n"
      ]
@@ -603,6 +546,288 @@
     "from pprint import pprint\n",
     "\n",
     "pprint(test.to_cdp_events(), sort_dicts=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "e64a96bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentence = \"Hello world 🏳️‍🌈😉👍🤦‍♂️😍🎶\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "e2259045",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H <class 'str'>\n",
+      "e <class 'str'>\n",
+      "l <class 'str'>\n",
+      "l <class 'str'>\n",
+      "o <class 'str'>\n",
+      "  <class 'str'>\n",
+      "w <class 'str'>\n",
+      "o <class 'str'>\n",
+      "r <class 'str'>\n",
+      "l <class 'str'>\n",
+      "d <class 'str'>\n",
+      "  <class 'str'>\n",
+      "🏳️‍🌈 <class 'str'>\n",
+      "😉 <class 'str'>\n",
+      "👍 <class 'str'>\n",
+      "🤦‍♂️ <class 'str'>\n",
+      "😍 <class 'str'>\n",
+      "🎶 <class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "events = []\n",
+    "for a in graphemes(sentence):\n",
+    "    if a is None or a == \"\":\n",
+    "        continue\n",
+    "    print(a, type(a))\n",
+    "    events.append(\n",
+    "        KeyEvents(a, KeyPressEvent.DOWN_AND_UP)\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "12c9b926",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[{'text': 'h',\n",
+       "   'key': 'h',\n",
+       "   'code': 'KeyH',\n",
+       "   'windows_virtual_key_code': 72,\n",
+       "   'native_virtual_key_code': 72,\n",
+       "   'type_': 'keyDown',\n",
+       "   'modifiers': 0},\n",
+       "  {'text': 'h',\n",
+       "   'key': 'h',\n",
+       "   'code': 'KeyH',\n",
+       "   'windows_virtual_key_code': 72,\n",
+       "   'native_virtual_key_code': 72,\n",
+       "   'type_': 'keyUp',\n",
+       "   'modifiers': 0}],\n",
+       " [{'text': 'e',\n",
+       "   'key': 'e',\n",
+       "   'code': 'KeyE',\n",
+       "   'windows_virtual_key_code': 69,\n",
+       "   'native_virtual_key_code': 69,\n",
+       "   'type_': 'keyDown',\n",
+       "   'modifiers': 0},\n",
+       "  {'text': 'e',\n",
+       "   'key': 'e',\n",
+       "   'code': 'KeyE',\n",
+       "   'windows_virtual_key_code': 69,\n",
+       "   'native_virtual_key_code': 69,\n",
+       "   'type_': 'keyUp',\n",
+       "   'modifiers': 0}],\n",
+       " [{'text': 'l',\n",
+       "   'key': 'l',\n",
+       "   'code': 'KeyL',\n",
+       "   'windows_virtual_key_code': 76,\n",
+       "   'native_virtual_key_code': 76,\n",
+       "   'type_': 'keyDown',\n",
+       "   'modifiers': 0},\n",
+       "  {'text': 'l',\n",
+       "   'key': 'l',\n",
+       "   'code': 'KeyL',\n",
+       "   'windows_virtual_key_code': 76,\n",
+       "   'native_virtual_key_code': 76,\n",
+       "   'type_': 'keyUp',\n",
+       "   'modifiers': 0}],\n",
+       " [{'text': 'l',\n",
+       "   'key': 'l',\n",
+       "   'code': 'KeyL',\n",
+       "   'windows_virtual_key_code': 76,\n",
+       "   'native_virtual_key_code': 76,\n",
+       "   'type_': 'keyDown',\n",
+       "   'modifiers': 0},\n",
+       "  {'text': 'l',\n",
+       "   'key': 'l',\n",
+       "   'code': 'KeyL',\n",
+       "   'windows_virtual_key_code': 76,\n",
+       "   'native_virtual_key_code': 76,\n",
+       "   'type_': 'keyUp',\n",
+       "   'modifiers': 0}],\n",
+       " [{'text': 'o',\n",
+       "   'key': 'o',\n",
+       "   'code': 'KeyO',\n",
+       "   'windows_virtual_key_code': 79,\n",
+       "   'native_virtual_key_code': 79,\n",
+       "   'type_': 'keyDown',\n",
+       "   'modifiers': 0},\n",
+       "  {'text': 'o',\n",
+       "   'key': 'o',\n",
+       "   'code': 'KeyO',\n",
+       "   'windows_virtual_key_code': 79,\n",
+       "   'native_virtual_key_code': 79,\n",
+       "   'type_': 'keyUp',\n",
+       "   'modifiers': 0}],\n",
+       " [{'text': ' ',\n",
+       "   'key': ' ',\n",
+       "   'code': ' ',\n",
+       "   'windows_virtual_key_code': 32,\n",
+       "   'native_virtual_key_code': 32,\n",
+       "   'type_': 'keyDown',\n",
+       "   'modifiers': 0},\n",
+       "  {'text': ' ',\n",
+       "   'key': ' ',\n",
+       "   'code': ' ',\n",
+       "   'windows_virtual_key_code': 32,\n",
+       "   'native_virtual_key_code': 32,\n",
+       "   'type_': 'keyUp',\n",
+       "   'modifiers': 0}],\n",
+       " [{'text': 'w',\n",
+       "   'key': 'w',\n",
+       "   'code': 'KeyW',\n",
+       "   'windows_virtual_key_code': 87,\n",
+       "   'native_virtual_key_code': 87,\n",
+       "   'type_': 'keyDown',\n",
+       "   'modifiers': 0},\n",
+       "  {'text': 'w',\n",
+       "   'key': 'w',\n",
+       "   'code': 'KeyW',\n",
+       "   'windows_virtual_key_code': 87,\n",
+       "   'native_virtual_key_code': 87,\n",
+       "   'type_': 'keyUp',\n",
+       "   'modifiers': 0}],\n",
+       " [{'text': 'o',\n",
+       "   'key': 'o',\n",
+       "   'code': 'KeyO',\n",
+       "   'windows_virtual_key_code': 79,\n",
+       "   'native_virtual_key_code': 79,\n",
+       "   'type_': 'keyDown',\n",
+       "   'modifiers': 0},\n",
+       "  {'text': 'o',\n",
+       "   'key': 'o',\n",
+       "   'code': 'KeyO',\n",
+       "   'windows_virtual_key_code': 79,\n",
+       "   'native_virtual_key_code': 79,\n",
+       "   'type_': 'keyUp',\n",
+       "   'modifiers': 0}],\n",
+       " [{'text': 'r',\n",
+       "   'key': 'r',\n",
+       "   'code': 'KeyR',\n",
+       "   'windows_virtual_key_code': 82,\n",
+       "   'native_virtual_key_code': 82,\n",
+       "   'type_': 'keyDown',\n",
+       "   'modifiers': 0},\n",
+       "  {'text': 'r',\n",
+       "   'key': 'r',\n",
+       "   'code': 'KeyR',\n",
+       "   'windows_virtual_key_code': 82,\n",
+       "   'native_virtual_key_code': 82,\n",
+       "   'type_': 'keyUp',\n",
+       "   'modifiers': 0}],\n",
+       " [{'text': 'l',\n",
+       "   'key': 'l',\n",
+       "   'code': 'KeyL',\n",
+       "   'windows_virtual_key_code': 76,\n",
+       "   'native_virtual_key_code': 76,\n",
+       "   'type_': 'keyDown',\n",
+       "   'modifiers': 0},\n",
+       "  {'text': 'l',\n",
+       "   'key': 'l',\n",
+       "   'code': 'KeyL',\n",
+       "   'windows_virtual_key_code': 76,\n",
+       "   'native_virtual_key_code': 76,\n",
+       "   'type_': 'keyUp',\n",
+       "   'modifiers': 0}],\n",
+       " [{'text': 'd',\n",
+       "   'key': 'd',\n",
+       "   'code': 'KeyD',\n",
+       "   'windows_virtual_key_code': 68,\n",
+       "   'native_virtual_key_code': 68,\n",
+       "   'type_': 'keyDown',\n",
+       "   'modifiers': 0},\n",
+       "  {'text': 'd',\n",
+       "   'key': 'd',\n",
+       "   'code': 'KeyD',\n",
+       "   'windows_virtual_key_code': 68,\n",
+       "   'native_virtual_key_code': 68,\n",
+       "   'type_': 'keyUp',\n",
+       "   'modifiers': 0}],\n",
+       " [{'text': ' ',\n",
+       "   'key': ' ',\n",
+       "   'code': ' ',\n",
+       "   'windows_virtual_key_code': 32,\n",
+       "   'native_virtual_key_code': 32,\n",
+       "   'type_': 'keyDown',\n",
+       "   'modifiers': 0},\n",
+       "  {'text': ' ',\n",
+       "   'key': ' ',\n",
+       "   'code': ' ',\n",
+       "   'windows_virtual_key_code': 32,\n",
+       "   'native_virtual_key_code': 32,\n",
+       "   'type_': 'keyUp',\n",
+       "   'modifiers': 0}],\n",
+       " [{'text': '🏳️\\u200d🌈',\n",
+       "   'key': None,\n",
+       "   'code': None,\n",
+       "   'windows_virtual_key_code': None,\n",
+       "   'native_virtual_key_code': None,\n",
+       "   'type_': 'char',\n",
+       "   'modifiers': <KeyModifiers.Default: 0>}],\n",
+       " [{'text': '😉',\n",
+       "   'key': None,\n",
+       "   'code': None,\n",
+       "   'windows_virtual_key_code': None,\n",
+       "   'native_virtual_key_code': None,\n",
+       "   'type_': 'char',\n",
+       "   'modifiers': <KeyModifiers.Default: 0>}],\n",
+       " [{'text': '👍',\n",
+       "   'key': None,\n",
+       "   'code': None,\n",
+       "   'windows_virtual_key_code': None,\n",
+       "   'native_virtual_key_code': None,\n",
+       "   'type_': 'char',\n",
+       "   'modifiers': <KeyModifiers.Default: 0>}],\n",
+       " [{'text': '🤦\\u200d♂️',\n",
+       "   'key': None,\n",
+       "   'code': None,\n",
+       "   'windows_virtual_key_code': None,\n",
+       "   'native_virtual_key_code': None,\n",
+       "   'type_': 'char',\n",
+       "   'modifiers': <KeyModifiers.Default: 0>}],\n",
+       " [{'text': '😍',\n",
+       "   'key': None,\n",
+       "   'code': None,\n",
+       "   'windows_virtual_key_code': None,\n",
+       "   'native_virtual_key_code': None,\n",
+       "   'type_': 'char',\n",
+       "   'modifiers': <KeyModifiers.Default: 0>}],\n",
+       " [{'text': '🎶',\n",
+       "   'key': None,\n",
+       "   'code': None,\n",
+       "   'windows_virtual_key_code': None,\n",
+       "   'native_virtual_key_code': None,\n",
+       "   'type_': 'char',\n",
+       "   'modifiers': <KeyModifiers.Default: 0>}]]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[events.to_cdp_events() for events in events]"
    ]
   }
  ],
