will test later

--- a/test.ipynb
+++ b/test.ipynb
@@ -493,17 +493,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "e10d0eaf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = KeyEvents(\"A\", KeyPressEvent.DOWN_AND_UP, KeyModifiers.Shift)"
+    "test = KeyEvents(\"{\", KeyPressEvent.DOWN_AND_UP, KeyModifiers.Shift)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "62c6aae6",
    "metadata": {},
    "outputs": [
@@ -518,11 +518,11 @@
       "  'native_virtual_key_code': 16,\n",
       "  'type_': 'keyDown',\n",
       "  'modifiers': 8},\n",
-      " {'text': 'A',\n",
-      "  'key': 'A',\n",
-      "  'code': 'KeyA',\n",
-      "  'windows_virtual_key_code': 65,\n",
-      "  'native_virtual_key_code': 65,\n",
+      " {'text': '{',\n",
+      "  'key': '{',\n",
+      "  'code': 'BracketLeft',\n",
+      "  'windows_virtual_key_code': 219,\n",
+      "  'native_virtual_key_code': 219,\n",
       "  'type_': 'keyDown',\n",
       "  'modifiers': 8},\n",
       " {'text': 'Shift',\n",
@@ -532,11 +532,11 @@
       "  'native_virtual_key_code': 16,\n",
       "  'type_': 'keyUp',\n",
       "  'modifiers': 0},\n",
-      " {'text': 'a',\n",
-      "  'key': 'a',\n",
-      "  'code': 'KeyA',\n",
-      "  'windows_virtual_key_code': 65,\n",
-      "  'native_virtual_key_code': 65,\n",
+      " {'text': '[',\n",
+      "  'key': '[',\n",
+      "  'code': 'BracketLeft',\n",
+      "  'windows_virtual_key_code': 219,\n",
+      "  'native_virtual_key_code': 219,\n",
       "  'type_': 'keyUp',\n",
       "  'modifiers': 0}]\n"
      ]
@@ -602,6 +602,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "22373177",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "248"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "sys.getsizeof(events)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "id": "12c9b926",
    "metadata": {},
@@ -609,12 +631,26 @@
     {
      "data": {
       "text/plain": [
-       "[[{'text': 'h',\n",
-       "   'key': 'h',\n",
+       "[[{'text': 'Shift',\n",
+       "   'key': 'Shift',\n",
+       "   'code': 'ShiftLeft',\n",
+       "   'windows_virtual_key_code': 16,\n",
+       "   'native_virtual_key_code': 16,\n",
+       "   'type_': 'keyDown',\n",
+       "   'modifiers': 8},\n",
+       "  {'text': 'H',\n",
+       "   'key': 'H',\n",
        "   'code': 'KeyH',\n",
        "   'windows_virtual_key_code': 72,\n",
        "   'native_virtual_key_code': 72,\n",
        "   'type_': 'keyDown',\n",
+       "   'modifiers': 8},\n",
+       "  {'text': 'Shift',\n",
+       "   'key': 'Shift',\n",
+       "   'code': 'ShiftLeft',\n",
+       "   'windows_virtual_key_code': 16,\n",
+       "   'native_virtual_key_code': 16,\n",
+       "   'type_': 'keyUp',\n",
        "   'modifiers': 0},\n",
        "  {'text': 'h',\n",
        "   'key': 'h',\n",
@@ -828,6 +864,60 @@
    ],
    "source": [
     "[events.to_cdp_events() for events in events]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "ae417ea2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "in_ = [\"Hello🏳️‍🌈\", SpecialKeys.ENTER, \"This is Harsh\"]\n",
+    "\n",
+    "new_in = [item \n",
+    "          for single_req in in_ \n",
+    "          for item in (graphemes(single_req) if isinstance(single_req, str) else [single_req])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "89560d63",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['H',\n",
+       " 'e',\n",
+       " 'l',\n",
+       " 'l',\n",
+       " 'o',\n",
+       " '🏳️\\u200d🌈',\n",
+       " <SpecialKeys.ENTER: ('Enter', 13)>,\n",
+       " 'T',\n",
+       " 'h',\n",
+       " 'i',\n",
+       " 's',\n",
+       " ' ',\n",
+       " 'i',\n",
+       " 's',\n",
+       " ' ',\n",
+       " 'H',\n",
+       " 'a',\n",
+       " 'r',\n",
+       " 's',\n",
+       " 'h']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_in"
    ]
   }
  ],
