--- a/test.ipynb
+++ b/test.ipynb
@@ -882,6 +882,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "4d2349a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_2 = \"omg, what is this\"\n",
+    "\n",
+    "new_test_2 = [\n",
+    "    \n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "id": "89560d63",
    "metadata": {},
