--- a/test.ipynb
+++ b/test.ipynb
@@ -38,10 +38,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "202c3f44",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "😁\n"
+     ]
+    }
+   ],
    "source": [
     "rainbow = \"\"\n",
     "\n",
@@ -51,17 +59,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "8d498828",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "1"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "id": "2cb67fd5",
    "metadata": {},
    "outputs": [
@@ -82,7 +90,7 @@
        "(33, 64, 35)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "0034166a",
    "metadata": {},
    "outputs": [],
@@ -145,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "ce459277",
    "metadata": {},
    "outputs": [],
@@ -155,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "0a47deeb",
    "metadata": {},
    "outputs": [],
@@ -165,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "f1419a71",
    "metadata": {},
    "outputs": [],
@@ -175,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "8bb7aca3",
    "metadata": {},
    "outputs": [],
@@ -185,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "id": "f19f135a",
    "metadata": {},
    "outputs": [],
@@ -195,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "b7459bee",
    "metadata": {},
    "outputs": [],
@@ -204,6 +212,200 @@
     "    raise TypeError(\"Expected writing_element to be of type zd.Element\")\n",
     "await writing_element.mouse_click(\"left\")\n",
     "await writing_element.send_keys(\"Hello world\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "c2ab754e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "await writing_element.send_keys([zd.KeyEvents(zd.SpecialKeys.ENTER, zd.KeyPressEvent.DOWN_AND_UP),\n",
+    "                                 zd.KeyEvents(\"a\", zd.KeyPressEvent.DOWN_AND_UP, zd.KeyModifiers.Ctrl),\n",
+    "                                 zd.KeyEvents(\"c\", zd.KeyPressEvent.DOWN_AND_UP, zd.KeyModifiers.Ctrl),\n",
+    "                                 zd.KeyEvents(zd.SpecialKeys.ARROW_DOWN, zd.KeyPressEvent.DOWN_AND_UP),\n",
+    "                                 zd.KeyEvents(\"v\", zd.KeyPressEvent.DOWN_AND_UP, zd.KeyModifiers.Ctrl)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "c259cab5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "await writing_element.send_keys([zd.KeyEvents(\"s\", zd.KeyPressEvent.DOWN_AND_UP, zd.KeyModifiers.Ctrl)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "392de52c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "await writing_element.send_keys([zd.KeyEvents(\"n\", zd.KeyPressEvent.DOWN_AND_UP, zd.KeyModifiers.Ctrl | zd.KeyModifiers.Shift)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "87da9b73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "main_element = await page.find(\"/html/body\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "ea03c9c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "await main_element.send_keys([zd.KeyEvents(\"n\", zd.KeyPressEvent.DOWN_AND_UP, zd.KeyModifiers.Ctrl | zd.KeyModifiers.Shift)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "53444f38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "o = zd.KeyEvents(\"n\", zd.KeyPressEvent.DOWN_AND_UP, zd.KeyModifiers.Ctrl | zd.KeyModifiers.Shift)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "2e6deb44",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'text': None,\n",
+       "  'key': 'Control',\n",
+       "  'code': 'ControlLeft',\n",
+       "  'windows_virtual_key_code': 17,\n",
+       "  'native_virtual_key_code': 17,\n",
+       "  'type_': 'keyDown',\n",
+       "  'modifiers': 2},\n",
+       " {'text': None,\n",
+       "  'key': 'Shift',\n",
+       "  'code': 'ShiftLeft',\n",
+       "  'windows_virtual_key_code': 16,\n",
+       "  'native_virtual_key_code': 16,\n",
+       "  'type_': 'keyDown',\n",
+       "  'modifiers': 10},\n",
+       " {'text': 'n',\n",
+       "  'key': 'n',\n",
+       "  'code': 'KeyN',\n",
+       "  'windows_virtual_key_code': 78,\n",
+       "  'native_virtual_key_code': 78,\n",
+       "  'type_': 'keyDown',\n",
+       "  'modifiers': 10},\n",
+       " {'text': None,\n",
+       "  'key': 'Control',\n",
+       "  'code': 'ControlLeft',\n",
+       "  'windows_virtual_key_code': 17,\n",
+       "  'native_virtual_key_code': 17,\n",
+       "  'type_': 'keyUp',\n",
+       "  'modifiers': 8},\n",
+       " {'text': None,\n",
+       "  'key': 'Shift',\n",
+       "  'code': 'ShiftLeft',\n",
+       "  'windows_virtual_key_code': 16,\n",
+       "  'native_virtual_key_code': 16,\n",
+       "  'type_': 'keyUp',\n",
+       "  'modifiers': 0},\n",
+       " {'text': 'n',\n",
+       "  'key': 'n',\n",
+       "  'code': 'KeyN',\n",
+       "  'windows_virtual_key_code': 78,\n",
+       "  'native_virtual_key_code': 78,\n",
+       "  'type_': 'keyUp',\n",
+       "  'modifiers': 0}]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "o.to_cdp_events()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "35f1facc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import zendriver as zd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "ab76a2ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = zd.KeyEvents(\"s\", zd.KeyPressEvent.DOWN_AND_UP, zd.KeyModifiers.Shift)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "ee3f8e7e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'text': None,\n",
+       "  'key': 'ShiftLeft',\n",
+       "  'code': 'ShiftLeft',\n",
+       "  'windows_virtual_key_code': 16,\n",
+       "  'native_virtual_key_code': 16,\n",
+       "  'type_': 'keyDown',\n",
+       "  'modifiers': 8},\n",
+       " {'text': 'S',\n",
+       "  'key': 'S',\n",
+       "  'code': 'KeyS',\n",
+       "  'windows_virtual_key_code': 83,\n",
+       "  'native_virtual_key_code': 83,\n",
+       "  'type_': 'keyDown',\n",
+       "  'modifiers': 8},\n",
+       " {'text': None,\n",
+       "  'key': 'ShiftLeft',\n",
+       "  'code': 'ShiftLeft',\n",
+       "  'windows_virtual_key_code': 16,\n",
+       "  'native_virtual_key_code': 16,\n",
+       "  'type_': 'keyUp',\n",
+       "  'modifiers': 0},\n",
+       " {'text': 's',\n",
+       "  'key': 's',\n",
+       "  'code': 'KeyS',\n",
+       "  'windows_virtual_key_code': 83,\n",
+       "  'native_virtual_key_code': 83,\n",
+       "  'type_': 'keyUp',\n",
+       "  'modifiers': 0}]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d.to_cdp_events()"
    ]
   },
   {
@@ -925,11 +1127,119 @@
    "source": [
     "new_in"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "1f566a8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import zendriver as zd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "0476cf8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = zd.KeyEvents(\"!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "ac75ef78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "634fae8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<zendriver.core.keys.KeyEvents object at 0x7937fd3f1f70> 1\n",
+      "<zendriver.core.keys.KeyEvents object at 0x7937fd3f3110> 8\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'type_': 'keyDown',\n",
+       "  'modifiers': 1,\n",
+       "  'text': None,\n",
+       "  'key': 'Alt',\n",
+       "  'code': 'AltLeft',\n",
+       "  'windows_virtual_key_code': 18,\n",
+       "  'native_virtual_key_code': 18},\n",
+       " {'type_': 'keyDown',\n",
+       "  'modifiers': 9,\n",
+       "  'text': None,\n",
+       "  'key': 'Shift',\n",
+       "  'code': 'ShiftLeft',\n",
+       "  'windows_virtual_key_code': 16,\n",
+       "  'native_virtual_key_code': 16},\n",
+       " {'type_': 'keyDown',\n",
+       "  'modifiers': 9,\n",
+       "  'text': '1',\n",
+       "  'key': '1',\n",
+       "  'code': 'Digit1',\n",
+       "  'windows_virtual_key_code': 49,\n",
+       "  'native_virtual_key_code': 49},\n",
+       " {'type_': 'keyUp',\n",
+       "  'modifiers': 8,\n",
+       "  'text': None,\n",
+       "  'key': 'Alt',\n",
+       "  'code': 'AltLeft',\n",
+       "  'windows_virtual_key_code': 18,\n",
+       "  'native_virtual_key_code': 18},\n",
+       " {'type_': 'keyUp',\n",
+       "  'modifiers': 0,\n",
+       "  'text': None,\n",
+       "  'key': 'Shift',\n",
+       "  'code': 'ShiftLeft',\n",
+       "  'windows_virtual_key_code': 16,\n",
+       "  'native_virtual_key_code': 16},\n",
+       " {'type_': 'keyUp',\n",
+       "  'modifiers': 0,\n",
+       "  'text': '1',\n",
+       "  'key': '1',\n",
+       "  'code': 'Digit1',\n",
+       "  'windows_virtual_key_code': 49,\n",
+       "  'native_virtual_key_code': 49}]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.to_cdp_events(zd.KeyPressEvent.DOWN_AND_UP, modifiers=zd.KeyModifiers.Shift | zd.KeyModifiers.Alt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9699a376",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -943,7 +1253,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
