--- a/test.ipynb
+++ b/test.ipynb
@@ -101,48 +101,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8147de24",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from prototype import KeyEvents, KeyModifiers, SpecialKeys, KeyPressEvent\n",
-    "from typing import List, Union"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7671f89e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import grapheme\n",
-    "\n",
-    "input_text:List[Union[str, SpecialKeys]] = [\"hello world\", SpecialKeys.ENTER, \"This is Harsh\"]\n",
-    "\n",
-    "\n",
-    "def generator_input(input_text: List[Union[str, SpecialKeys]]):\n",
-    "    for item in input_text:\n",
-    "        if isinstance(item, str):\n",
-    "            grapheme_iter = grapheme.graphemes(item)\n",
-    "            for grapheme_char in grapheme_iter:\n",
-    "                grapheme_char = str(grapheme_char)\n",
-    "                yield KeyEvents.get_keyEvent(grapheme_char, KeyModifiers.Default)\n",
-    "        elif isinstance(item, SpecialKeys):\n",
-    "            yield KeyEvents.get_keyEvent(\n",
-    "                item, KeyModifiers.Default, KeyPressEvent.DOWN_AND_UP\n",
-    "            )\n",
-    "\n",
-    "\n",
-    "    yield KeyEvents.get_keyEvent(\"a\", KeyModifiers.Ctrl, KeyPressEvent.CHAR)\n",
-    "    # yield KeyEvents.get_key_action(\n",
-    "    #         SpecialKeys.BACKSPACE, KeyModifiers.Default, KeyEventType.DOWN_AND_UP\n",
-    "    #     )"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "id": "0034166a",
    "metadata": {},
@@ -153,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "ce459277",
    "metadata": {},
    "outputs": [],
@@ -163,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "0a47deeb",
    "metadata": {},
    "outputs": [],
@@ -173,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "f1419a71",
    "metadata": {},
    "outputs": [],
@@ -183,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "8bb7aca3",
    "metadata": {},
    "outputs": [],
@@ -193,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "f19f135a",
    "metadata": {},
    "outputs": [],
@@ -203,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "b7459bee",
    "metadata": {},
    "outputs": [],
@@ -216,36 +174,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
+   "id": "79f55f53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = zd.KeyEvents.from_mixed_input(\n",
+    "    [\n",
+    "        zd.SpecialKeys.ENTER,\n",
+    "        (\"a\", zd.KeyModifiers.Ctrl),\n",
+    "        (\"c\", zd.KeyModifiers.Ctrl),\n",
+    "        zd.SpecialKeys.ARROW_DOWN,\n",
+    "        (\"v\", zd.KeyModifiers.Ctrl),\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "1c4cfa72",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_commands=[zd.KeyEvents(zd.SpecialKeys.ENTER),\n",
+    "                                 zd.KeyEvents(\"a\", zd.KeyModifiers.Ctrl),\n",
+    "                                 zd.KeyEvents(\"c\", zd.KeyModifiers.Ctrl),\n",
+    "                                 zd.KeyEvents(zd.SpecialKeys.ARROW_DOWN),\n",
+    "                                 zd.KeyEvents(\"v\", zd.KeyModifiers.Ctrl)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "c2ab754e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "await writing_element.send_keys([zd.KeyEvents(zd.SpecialKeys.ENTER, zd.KeyPressEvent.DOWN_AND_UP),\n",
-    "                                 zd.KeyEvents(\"a\", zd.KeyPressEvent.DOWN_AND_UP, zd.KeyModifiers.Ctrl),\n",
-    "                                 zd.KeyEvents(\"c\", zd.KeyPressEvent.DOWN_AND_UP, zd.KeyModifiers.Ctrl),\n",
-    "                                 zd.KeyEvents(zd.SpecialKeys.ARROW_DOWN, zd.KeyPressEvent.DOWN_AND_UP),\n",
-    "                                 zd.KeyEvents(\"v\", zd.KeyPressEvent.DOWN_AND_UP, zd.KeyModifiers.Ctrl)])"
+    "l= [b for a in input_commands for b in a.to_cdp_events(zd.KeyPressEvent.DOWN_AND_UP)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "c259cab5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "await writing_element.send_keys(l)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "c259cab5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "await writing_element.send_keys([zd.KeyEvents(\"s\", zd.KeyPressEvent.DOWN_AND_UP, zd.KeyModifiers.Ctrl)])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
    "id": "392de52c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "await writing_element.send_keys([zd.KeyEvents(\"n\", zd.KeyPressEvent.DOWN_AND_UP, zd.KeyModifiers.Ctrl | zd.KeyModifiers.Shift)])"
+    "await writing_element.send_keys(zd.KeyEvents(\"n\", zd.KeyModifiers.Ctrl).to_cdp_events(zd.KeyPressEvent.DOWN_AND_UP))"
    ]
   },
   {
@@ -1160,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "634fae8d",
    "metadata": {},
    "outputs": [
@@ -1225,7 +1211,7 @@
     }
    ],
    "source": [
-    "a.to_cdp_events(zd.KeyPressEvent.DOWN_AND_UP, modifiers=zd.KeyModifiers.Shift | zd.KeyModifiers.Alt)"
+    "a.to_cdp_events(zd.KeyPressEvent.DOWN_AND_UP, override_modifiers=zd.KeyModifiers.Shift | zd.KeyModifiers.Alt)"
    ]
   },
   {
